host/scripts/translate-portage/grammar/DepGrammarParser.py
# Generated from DepGrammar.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class DepGrammarParser ( Parser ):

    grammarFileName = "DepGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ u"<INVALID>", u"WS", u"OR", u"XOR", u"ONEMAX", u"NOT", 
                      u"BLOCK", u"IMPLIES", u"LEQ", u"EQ", u"GEQ", u"LT", 
                      u"GT", u"NEQ", u"REV", u"LPAREN", u"RPAREN", u"LBRACKET", 
                      u"RBRACKET", u"LBRACE", u"RBRACE", u"PLUS", u"MINUS", 
                      u"TIMES", u"DIV", u"COLON", u"COMMA", u"AT", u"SBlock", 
                      u"VBlock", u"ABlock", u"CONTINUATION_MODE_WS", u"CM_SBlock", 
                      u"CM_VBlock", u"CM_ABlock" ]

    RULE_required = 0
    RULE_requiredEL = 1
    RULE_depend = 2
    RULE_dependEL = 3
    RULE_choice = 4
    RULE_condition = 5
    RULE_conditionAttribute = 6
    RULE_conditionOP = 7
    RULE_use = 8
    RULE_value = 9
    RULE_atom = 10
    RULE_versionOP = 11
    RULE_catpackage = 12
    RULE_category = 13
    RULE_package = 14
    RULE_version = 15
    RULE_slotSPEC = 16
    RULE_slotID = 17
    RULE_selection = 18
    RULE_prefix = 19
    RULE_preference = 20
    RULE_suffix = 21

    ruleNames =  [ u"required", u"requiredEL", u"depend", u"dependEL", u"choice", 
                   u"condition", u"conditionAttribute", u"conditionOP", 
                   u"use", u"value", u"atom", u"versionOP", u"catpackage", 
                   u"category", u"package", u"version", u"slotSPEC", u"slotID", 
                   u"selection", u"prefix", u"preference", u"suffix" ]

    EOF = Token.EOF
    WS=1
    OR=2
    XOR=3
    ONEMAX=4
    NOT=5
    BLOCK=6
    IMPLIES=7
    LEQ=8
    EQ=9
    GEQ=10
    LT=11
    GT=12
    NEQ=13
    REV=14
    LPAREN=15
    RPAREN=16
    LBRACKET=17
    RBRACKET=18
    LBRACE=19
    RBRACE=20
    PLUS=21
    MINUS=22
    TIMES=23
    DIV=24
    COLON=25
    COMMA=26
    AT=27
    SBlock=28
    VBlock=29
    ABlock=30
    CONTINUATION_MODE_WS=31
    CM_SBlock=32
    CM_VBlock=33
    CM_ABlock=34

    def __init__(self, input):
        super(DepGrammarParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RequiredContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.RequiredContext, self).__init__(parent, invokingState)
            self.parser = parser

        def requiredEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.RequiredELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.RequiredELContext,i)


        def getRuleIndex(self):
            return DepGrammarParser.RULE_required

        def accept(self, visitor):
            if hasattr(visitor, "visitRequired"):
                return visitor.visitRequired(self)
            else:
                return visitor.visitChildren(self)




    def required(self):

        localctx = DepGrammarParser.RequiredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_required)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                self.state = 44
                self.requiredEL()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequiredELContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.RequiredELContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DepGrammarParser.RULE_requiredEL

     
        def copyFrom(self, ctx):
            super(DepGrammarParser.RequiredELContext, self).copyFrom(ctx)



    class RequiredCONDITIONContext(RequiredELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.RequiredELContext)
            super(DepGrammarParser.RequiredCONDITIONContext, self).__init__(parser)
            self.copyFrom(ctx)

        def condition(self):
            return self.getTypedRuleContext(DepGrammarParser.ConditionContext,0)

        def LPAREN(self):
            return self.getToken(DepGrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(DepGrammarParser.RPAREN, 0)
        def requiredEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.RequiredELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.RequiredELContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitRequiredCONDITION"):
                return visitor.visitRequiredCONDITION(self)
            else:
                return visitor.visitChildren(self)


    class RequiredCHOICEContext(RequiredELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.RequiredELContext)
            super(DepGrammarParser.RequiredCHOICEContext, self).__init__(parser)
            self.copyFrom(ctx)

        def choice(self):
            return self.getTypedRuleContext(DepGrammarParser.ChoiceContext,0)

        def LPAREN(self):
            return self.getToken(DepGrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(DepGrammarParser.RPAREN, 0)
        def requiredEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.RequiredELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.RequiredELContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitRequiredCHOICE"):
                return visitor.visitRequiredCHOICE(self)
            else:
                return visitor.visitChildren(self)


    class RequiredINNERContext(RequiredELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.RequiredELContext)
            super(DepGrammarParser.RequiredINNERContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(DepGrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(DepGrammarParser.RPAREN, 0)
        def requiredEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.RequiredELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.RequiredELContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitRequiredINNER"):
                return visitor.visitRequiredINNER(self)
            else:
                return visitor.visitChildren(self)


    class RequiredSIMPLEContext(RequiredELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.RequiredELContext)
            super(DepGrammarParser.RequiredSIMPLEContext, self).__init__(parser)
            self.copyFrom(ctx)

        def use(self):
            return self.getTypedRuleContext(DepGrammarParser.UseContext,0)

        def NOT(self):
            return self.getToken(DepGrammarParser.NOT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitRequiredSIMPLE"):
                return visitor.visitRequiredSIMPLE(self)
            else:
                return visitor.visitChildren(self)



    def requiredEL(self):

        localctx = DepGrammarParser.RequiredELContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_requiredEL)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = DepGrammarParser.RequiredSIMPLEContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DepGrammarParser.NOT:
                    self.state = 50
                    self.match(DepGrammarParser.NOT)


                self.state = 53
                self.use()
                pass

            elif la_ == 2:
                localctx = DepGrammarParser.RequiredCONDITIONContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.condition()
                self.state = 55
                self.match(DepGrammarParser.LPAREN)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                    self.state = 56
                    self.requiredEL()
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 62
                self.match(DepGrammarParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = DepGrammarParser.RequiredCHOICEContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.choice()
                self.state = 65
                self.match(DepGrammarParser.LPAREN)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                    self.state = 66
                    self.requiredEL()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 72
                self.match(DepGrammarParser.RPAREN)
                pass

            elif la_ == 4:
                localctx = DepGrammarParser.RequiredINNERContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.match(DepGrammarParser.LPAREN)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                    self.state = 75
                    self.requiredEL()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 81
                self.match(DepGrammarParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DependContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.DependContext, self).__init__(parent, invokingState)
            self.parser = parser

        def dependEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.DependELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.DependELContext,i)


        def getRuleIndex(self):
            return DepGrammarParser.RULE_depend

        def accept(self, visitor):
            if hasattr(visitor, "visitDepend"):
                return visitor.visitDepend(self)
            else:
                return visitor.visitChildren(self)




    def depend(self):

        localctx = DepGrammarParser.DependContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_depend)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.BLOCK) | (1 << DepGrammarParser.LEQ) | (1 << DepGrammarParser.EQ) | (1 << DepGrammarParser.GEQ) | (1 << DepGrammarParser.LT) | (1 << DepGrammarParser.GT) | (1 << DepGrammarParser.NEQ) | (1 << DepGrammarParser.REV) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                self.state = 84
                self.dependEL()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DependELContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.DependELContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DepGrammarParser.RULE_dependEL

     
        def copyFrom(self, ctx):
            super(DepGrammarParser.DependELContext, self).copyFrom(ctx)



    class DependSIMPLEContext(DependELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.DependELContext)
            super(DepGrammarParser.DependSIMPLEContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(DepGrammarParser.AtomContext,0)

        def NOT(self):
            return self.getToken(DepGrammarParser.NOT, 0)
        def BLOCK(self):
            return self.getToken(DepGrammarParser.BLOCK, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitDependSIMPLE"):
                return visitor.visitDependSIMPLE(self)
            else:
                return visitor.visitChildren(self)


    class DependINNERContext(DependELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.DependELContext)
            super(DepGrammarParser.DependINNERContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(DepGrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(DepGrammarParser.RPAREN, 0)
        def dependEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.DependELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.DependELContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitDependINNER"):
                return visitor.visitDependINNER(self)
            else:
                return visitor.visitChildren(self)


    class DependCONDITIONContext(DependELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.DependELContext)
            super(DepGrammarParser.DependCONDITIONContext, self).__init__(parser)
            self.copyFrom(ctx)

        def condition(self):
            return self.getTypedRuleContext(DepGrammarParser.ConditionContext,0)

        def LPAREN(self):
            return self.getToken(DepGrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(DepGrammarParser.RPAREN, 0)
        def dependEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.DependELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.DependELContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitDependCONDITION"):
                return visitor.visitDependCONDITION(self)
            else:
                return visitor.visitChildren(self)


    class DependCHOICEContext(DependELContext):

        def __init__(self, parser, ctx): # actually a DepGrammarParser.DependELContext)
            super(DepGrammarParser.DependCHOICEContext, self).__init__(parser)
            self.copyFrom(ctx)

        def choice(self):
            return self.getTypedRuleContext(DepGrammarParser.ChoiceContext,0)

        def LPAREN(self):
            return self.getToken(DepGrammarParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(DepGrammarParser.RPAREN, 0)
        def dependEL(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.DependELContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.DependELContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitDependCHOICE"):
                return visitor.visitDependCHOICE(self)
            else:
                return visitor.visitChildren(self)



    def dependEL(self):

        localctx = DepGrammarParser.DependELContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dependEL)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = DepGrammarParser.DependSIMPLEContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DepGrammarParser.NOT or _la==DepGrammarParser.BLOCK:
                    self.state = 90
                    _la = self._input.LA(1)
                    if not(_la==DepGrammarParser.NOT or _la==DepGrammarParser.BLOCK):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 93
                self.atom()
                pass

            elif la_ == 2:
                localctx = DepGrammarParser.DependCONDITIONContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.condition()
                self.state = 95
                self.match(DepGrammarParser.LPAREN)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.BLOCK) | (1 << DepGrammarParser.LEQ) | (1 << DepGrammarParser.EQ) | (1 << DepGrammarParser.GEQ) | (1 << DepGrammarParser.LT) | (1 << DepGrammarParser.GT) | (1 << DepGrammarParser.NEQ) | (1 << DepGrammarParser.REV) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                    self.state = 96
                    self.dependEL()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 102
                self.match(DepGrammarParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = DepGrammarParser.DependCHOICEContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.choice()
                self.state = 105
                self.match(DepGrammarParser.LPAREN)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.BLOCK) | (1 << DepGrammarParser.LEQ) | (1 << DepGrammarParser.EQ) | (1 << DepGrammarParser.GEQ) | (1 << DepGrammarParser.LT) | (1 << DepGrammarParser.GT) | (1 << DepGrammarParser.NEQ) | (1 << DepGrammarParser.REV) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                    self.state = 106
                    self.dependEL()
                    self.state = 111
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 112
                self.match(DepGrammarParser.RPAREN)
                pass

            elif la_ == 4:
                localctx = DepGrammarParser.DependINNERContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(DepGrammarParser.LPAREN)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX) | (1 << DepGrammarParser.NOT) | (1 << DepGrammarParser.BLOCK) | (1 << DepGrammarParser.LEQ) | (1 << DepGrammarParser.EQ) | (1 << DepGrammarParser.GEQ) | (1 << DepGrammarParser.LT) | (1 << DepGrammarParser.GT) | (1 << DepGrammarParser.NEQ) | (1 << DepGrammarParser.REV) | (1 << DepGrammarParser.LPAREN) | (1 << DepGrammarParser.SBlock) | (1 << DepGrammarParser.ABlock))) != 0):
                    self.state = 115
                    self.dependEL()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 121
                self.match(DepGrammarParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChoiceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.ChoiceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(DepGrammarParser.OR, 0)

        def ONEMAX(self):
            return self.getToken(DepGrammarParser.ONEMAX, 0)

        def XOR(self):
            return self.getToken(DepGrammarParser.XOR, 0)

        def getRuleIndex(self):
            return DepGrammarParser.RULE_choice

        def accept(self, visitor):
            if hasattr(visitor, "visitChoice"):
                return visitor.visitChoice(self)
            else:
                return visitor.visitChildren(self)




    def choice(self):

        localctx = DepGrammarParser.ChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_choice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.OR) | (1 << DepGrammarParser.XOR) | (1 << DepGrammarParser.ONEMAX))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.ConditionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def use(self):
            return self.getTypedRuleContext(DepGrammarParser.UseContext,0)


        def IMPLIES(self):
            return self.getToken(DepGrammarParser.IMPLIES, 0)

        def NOT(self):
            return self.getToken(DepGrammarParser.NOT, 0)

        def LBRACE(self):
            return self.getToken(DepGrammarParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(DepGrammarParser.RBRACE, 0)

        def conditionAttribute(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(DepGrammarParser.ConditionAttributeContext)
            else:
                return self.getTypedRuleContext(DepGrammarParser.ConditionAttributeContext,i)


        def getRuleIndex(self):
            return DepGrammarParser.RULE_condition

        def accept(self, visitor):
            if hasattr(visitor, "visitCondition"):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = DepGrammarParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DepGrammarParser.NOT:
                self.state = 126
                self.match(DepGrammarParser.NOT)


            self.state = 129
            self.use()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DepGrammarParser.LBRACE:
                self.state = 130
                self.match(DepGrammarParser.LBRACE)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DepGrammarParser.SBlock or _la==DepGrammarParser.ABlock:
                    self.state = 131
                    self.conditionAttribute()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 137
                self.match(DepGrammarParser.RBRACE)


            self.state = 140
            self.match(DepGrammarParser.IMPLIES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionAttributeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.ConditionAttributeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.attribute = None # UseContext

        def conditionOP(self):
            return self.getTypedRuleContext(DepGrammarParser.ConditionOPContext,0)


        def value(self):
            return self.getTypedRuleContext(DepGrammarParser.ValueContext,0)


        def use(self):
            return self.getTypedRuleContext(DepGrammarParser.UseContext,0)


        def getRuleIndex(self):
            return DepGrammarParser.RULE_conditionAttribute

        def accept(self, visitor):
            if hasattr(visitor, "visitConditionAttribute"):
                return visitor.visitConditionAttribute(self)
            else:
                return visitor.visitChildren(self)




    def conditionAttribute(self):

        localctx = DepGrammarParser.ConditionAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conditionAttribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            localctx.attribute = self.use()
            self.state = 143
            self.conditionOP()
            self.state = 144
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionOPContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.ConditionOPContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LEQ(self):
            return self.getToken(DepGrammarParser.LEQ, 0)

        def LT(self):
            return self.getToken(DepGrammarParser.LT, 0)

        def GT(self):
            return self.getToken(DepGrammarParser.GT, 0)

        def GEQ(self):
            return self.getToken(DepGrammarParser.GEQ, 0)

        def EQ(self):
            return self.getToken(DepGrammarParser.EQ, 0)

        def NEQ(self):
            return self.getToken(DepGrammarParser.NEQ, 0)

        def getRuleIndex(self):
            return DepGrammarParser.RULE_conditionOP

        def accept(self, visitor):
            if hasattr(visitor, "visitConditionOP"):
                return visitor.visitConditionOP(self)
            else:
                return visitor.visitChildren(self)




    def conditionOP(self):

        localctx = DepGrammarParser.ConditionOPContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditionOP)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.LEQ) | (1 << DepGrammarParser.EQ) | (1 << DepGrammarParser.GEQ) | (1 << DepGrammarParser.LT) | (1 << DepGrammarParser.GT) | (1 << DepGrammarParser.NEQ))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(DepGrammarParser.UseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ABlock(self):
            return self.getToken(DepGrammarParser.ABlock, 0)

        def SBlock(self):
            return self.getToken(DepGrammarParser.SBlock, 0)

        def CM_ABlock(self, i=None):
            if i is None:
                return self.getTokens(DepGrammarParser.CM_ABlock)
            else:
                return self.getToken(DepGrammarParser.CM_ABlock, i)

        def CM_SBlock(self, i=None):
            if i is None:
                return self.getTokens(DepGrammarParser.CM_SBlock)
            else:
                return self.getToken(DepGrammarParser.CM_SBlock, i)

        def MINUS(self, i=None):
            if i is None:
                return self.getTokens(DepGrammarParser.MINUS)
            else:
                return self.getToken(DepGrammarParser.MINUS, i)

        def AT(self, i=None):
            if i is None:
                return self.getTokens(DepGrammarParser.AT)
            else:
                return self.getToken(DepGrammarParser.AT, i)

        def getRuleIndex(self):
            return DepGrammarParser.RULE_use

        def accept(self, visitor):
            if hasattr(visitor, "visitUse"):
                return visitor.visitUse(self)
            else:
                return visitor.visitChildren(self)




    def use(self):

        localctx = DepGrammarParser.UseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_use)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==DepGrammarParser.SBlock or _la==DepGrammarParser.ABlock):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DepGrammarParser.MINUS) | (1 << DepGrammarParser.AT) | (1 << DepGrammarParser.CM_SBlock) | (1 << DepGrammarParser.CM_ABlock))) != 0):
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DepGrammarParser.MINUS or _la==DepGrammarParser.AT:
                    self.state = 149
                    _la = self._input.LA(1)
                    if not(_la==DepGrammarParser.MINUS or _la==DepGrammarParser.AT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 152
                _la = self._input.LA(1)
                if not(_la==DepGrammarParser.CM_SBlock or _la==DepGrammarParser.CM_ABlock):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
